# CppWebserver

./: .gitignore  CppWebserver.code-workspace  Todos.txt  byteorder.c  client.c  cool_ideas.txt  server.c  unp.h
Concurrency/: blank_cpp_generator.py  hello_world.cpp  thread_args.cpp  thread_exception.cpp  thread_number.cpp  thread_ownership.cpp  thread_wait.cpp
Concurrency/C++11_Features/: constexpr.cpp  constexpr14.cpp  default.cpp  lambda.cpp  rvalue_references.cpp
Concurrency/CodeGenerator/: blank_cpp_generator.py  config.yaml
LinuxSpecific/: bash_testing.c  ptrace_test.c  rsync.c
SimpleWebServer/: HttpParser.cpp  HttpParser.hpp  RequestHandler.hpp  WebServer.cpp  ideas.txt  index.html  page2.html
SimpleWebServer/HttpRequestSyntax/: HttpGetRequest.txt
TestCode/: TcpServer.cpp  inheritance.cpp
UNP_Exercises/: CMakeLists.txt  unp.cpp  unpConfig.h.in
UNP_Exercises/Chapter3/: inet_pton_loose.cpp
UNP_Exercises/intro/: CMakeLists.txt  daytimetcpcli.cpp  daytimetcpsrv.cpp  test_daytimeclient.c
UNP_Exercises/libs/Wrappers/: CMakeLists.txt  Socket.cpp  Socket.hpp  SocketIPv4.cpp  SocketIPv4.hpp
libs/Networking/Sockets/: CMakeLists.txt  Socket.cpp  Socket.hpp  SocketIPv4.cpp  SocketIPv4.hpp  build.sh
